# Sortings-with-GUI

./: .gitignore  CMakeLists.txt  README.md
SortingWithGui/: arrsort.cpp  arrsort.h  main.qml
build-SortingWithGui-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: .qmake.stash  Makefile.Debug  Makefile.Release
lib/: CMakeLists.txt
lib/Sort/: Change.hpp  Insertion.hpp  Sort.hpp  Type.hpp  bubble.hpp  heap.hpp  insertion.hpp  merge.hpp  quick.hpp  selection.hpp
lib/Utils/: Range.hpp
libs/: CMakeLists.txt
libs/libsort/: sortings.hpp
tests/: CMakeLists.txt  tests.cpp
ui/: CMakeLists.txt  Change.hpp  Index.hpp  Sort.cpp  Sort.hpp  SortingWithGui.pro  arrsort.cpp  arrsort.h  elIndex.h  main.cpp  main.qml  operations.hpp
ui/Res/: main.qml
